Fixed vertical alignment.

--- a/src/main/resources/static/css/pages/user/user.css
+++ b/src/main/resources/static/css/pages/user/user.css
@@ -8,13 +8,15 @@ html, body {
 .content-wrap.with-image-background {
     background-size: cover;
     background-position: center;
-    height: 100vh;
     margin: 16px;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .content.auth-page {
     width: 360px;
-    padding: 8% 0 0;
     margin: auto;
 }
 .auth-form {
@@ -23,10 +25,10 @@ html, body {
     padding: 45px;
     text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    max-height: 100%;
 }
 .auth-form input {
     border: 2px outset var(--color-brown);
-    /*border-radius: 5px;*/
     font-size: var(--font-small);
     width: 100%;
     box-sizing: border-box;
